--- a/fastcalc/fastcalc/FastCalc/PriceCell.xib
+++ b/fastcalc/fastcalc/FastCalc/PriceCell.xib
@@ -12,7 +12,6 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
-			<string>IBUIImageView</string>
 			<string>IBUITableViewCell</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -38,43 +37,10 @@
 					<object class="IBUIView" id="246747557">
 						<reference key="NSNextResponder" ref="710444524"/>
 						<int key="NSvFlags">256</int>
-						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="1020914982">
-								<reference key="NSNextResponder" ref="246747557"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrameSize">{288, 46}</string>
-								<reference key="NSSuperview" ref="246747557"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="660464650"/>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">2</int>
-									<bytes key="NSRGB">MC44NTg4MjM1OTc0IDAuOTEzNzI1NTU0OSAxAA</bytes>
-								</object>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cell-off.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="660464650">
-								<reference key="NSNextResponder" ref="246747557"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{14, 3}, {40, 40}}</string>
-								<reference key="NSSuperview" ref="246747557"/>
-								<reference key="NSWindow"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
-						</array>
 						<string key="NSFrameSize">{288, 45}</string>
 						<reference key="NSSuperview" ref="710444524"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1020914982"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -121,21 +87,8 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="710444524"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="1020914982"/>
-							<reference ref="660464650"/>
-						</array>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">4</int>
-						<reference key="object" ref="660464650"/>
-						<reference key="parent" ref="710444524"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">3</int>
-						<reference key="object" ref="1020914982"/>
-						<reference key="parent" ref="710444524"/>
 					</object>
 				</array>
 			</object>
@@ -143,8 +96,6 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.CustomClassName">PriceCell</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -174,10 +125,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">cell-off.png</string>
-			<string key="NS.object.0">{288, 46}</string>
-		</object>
 		<string key="IBCocoaTouchPluginVersion">1181</string>
 	</data>
 </archive>
