--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -62,6 +62,7 @@
 						<string key="NSFrame">{{15, 550}, {288, 264}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -111,21 +112,21 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="771612721">
+					<object class="IBUIView" id="696399524">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUITableView" id="658427827">
-								<reference key="NSNextResponder" ref="771612721"/>
+								<reference key="NSNextResponder" ref="696399524"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{288, 371}</string>
-								<reference key="NSSuperview" ref="771612721"/>
+								<string key="NSFrameSize">{288, 370}</string>
+								<reference key="NSSuperview" ref="696399524"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="960763910"/>
+								<reference key="NSNextKeyView" ref="84019993"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
+									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -137,11 +138,11 @@
 								<float key="IBUISectionHeaderHeight">22</float>
 								<float key="IBUISectionFooterHeight">22</float>
 							</object>
-							<object class="IBUILabel" id="960763910">
-								<reference key="NSNextResponder" ref="771612721"/>
+							<object class="IBUILabel" id="84019993">
+								<reference key="NSNextResponder" ref="696399524"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 379}, {248, 32}}</string>
-								<reference key="NSSuperview" ref="771612721"/>
+								<reference key="NSSuperview" ref="696399524"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="926368938"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -187,7 +188,7 @@
 						<string key="NSFrame">{{0, 397}, {320, 120}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="771612721"/>
+						<reference key="NSNextKeyView" ref="696399524"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">4</int>
@@ -203,7 +204,7 @@
 				<string key="NSFrameSize">{320, 479}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
+				<reference key="NSNextKeyView" ref="494345736"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -229,8 +230,8 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
 			</object>
-			<object class="IBUISwipeGestureRecognizer" id="926753109"/>
-			<object class="IBUISwipeGestureRecognizer" id="889917993"/>
+			<object class="IBUISwipeGestureRecognizer" id="31404327"/>
+			<object class="IBUISwipeGestureRecognizer" id="1048863470"/>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
@@ -262,7 +263,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mTotalLbl</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="960763910"/>
+						<reference key="destination" ref="84019993"/>
 					</object>
 					<int key="connectionID">41</int>
 				</object>
@@ -270,7 +271,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mCheckView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="771612721"/>
+						<reference key="destination" ref="696399524"/>
 					</object>
 					<int key="connectionID">43</int>
 				</object>
@@ -294,7 +295,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mGestureRecognizerDown</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="926753109"/>
+						<reference key="destination" ref="31404327"/>
 					</object>
 					<int key="connectionID">48</int>
 				</object>
@@ -302,7 +303,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mGestureRecognizerUp</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="889917993"/>
+						<reference key="destination" ref="1048863470"/>
 					</object>
 					<int key="connectionID">49</int>
 				</object>
@@ -365,7 +366,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">gestureTaped:</string>
-						<reference key="source" ref="926753109"/>
+						<reference key="source" ref="31404327"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">42</int>
@@ -373,7 +374,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">gestureTaped:</string>
-						<reference key="source" ref="889917993"/>
+						<reference key="source" ref="1048863470"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">50</int>
@@ -396,9 +397,10 @@
 							<reference ref="326047165"/>
 							<reference ref="97418279"/>
 							<reference ref="926368938"/>
-							<reference ref="771612721"/>
+							<reference ref="696399524"/>
 						</array>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">Main Scroll View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">-1</int>
@@ -425,58 +427,67 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">38</int>
-						<reference key="object" ref="926753109"/>
+						<reference key="object" ref="31404327"/>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">Swipe Gesture Recognizer Down</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">32</int>
 						<reference key="object" ref="97418279"/>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Price View Mask</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">35</int>
-						<reference key="object" ref="771612721"/>
+						<reference key="object" ref="696399524"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="658427827"/>
-							<reference ref="960763910"/>
+							<reference ref="84019993"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Price View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">36</int>
-						<reference key="object" ref="960763910"/>
-						<reference key="parent" ref="771612721"/>
+						<reference key="object" ref="84019993"/>
+						<reference key="parent" ref="696399524"/>
+						<string key="objectName">Price Label</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="658427827"/>
-						<reference key="parent" ref="771612721"/>
+						<reference key="parent" ref="696399524"/>
+						<string key="objectName">Price Table View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
 						<reference key="object" ref="926368938"/>
 						<reference key="parent" ref="191373211"/>
-						<string key="objectName">animation view</string>
+						<string key="objectName">Animation View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
 						<reference key="object" ref="305558702"/>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Table Mask</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
 						<reference key="object" ref="326047165"/>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Menu Table View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">30</int>
 						<reference key="object" ref="494345736"/>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Main calc background</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">47</int>
-						<reference key="object" ref="889917993"/>
+						<reference key="object" ref="1048863470"/>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">Swipe Gesture Recognizer Up</string>
 					</object>
 				</array>
 			</object>
@@ -584,6 +595,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">PriceTableViewController</string>
 					<string key="superclassName">UITableViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">mTableView</string>
+						<string key="NS.object.0">UITableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">mTableView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">mTableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PriceTableViewController.h</string>
